Profile page input labels readonly feature not working on phone app; switched things up. Reduced class name to fit on queue page

--- a/src/components/edit-hours-form/edit-hours-form.html
+++ b/src/components/edit-hours-form/edit-hours-form.html
@@ -1,6 +1,6 @@
 <ion-row center>
   <ion-col text-center>
-    <button ion-button round class="addButton" (click)="addOfficeHourSlot()" [disabled]="newOfficeHours">
+    <button ion-button small round class="addButton" (click)="addOfficeHourSlot()" [disabled]="newOfficeHours">
       Add Office Hours
       <ion-icon name="add" large></ion-icon>
     </button>
