--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -1,8 +1,12 @@
 profile-view {
+
+  .profile-list-item{
+    color: white;
+  }
+
   .signOut {
     font-size: 100%;
   }
-
 
   ion-row {
     text-align: center;
