Edit office hours now looks better on phone; the save button is on top with the delete button

--- a/src/components/edit-hours-form/edit-hours-form.scss
+++ b/src/components/edit-hours-form/edit-hours-form.scss
@@ -4,6 +4,18 @@ edit-hours-form {
     font-size: 100%;
   }
 
+  .instructing{
+    color: white;
+  }
+
+  ion-toggle {
+    zoom: 0.75;
+  }
+
+  .instructor-list{
+    border-bottom: 2px white;
+  }
+
   .no-box-shadow {
     box-shadow: none;
   }
