--- a/src/components/edit-profile-form/edit-profile-form.scss
+++ b/src/components/edit-profile-form/edit-profile-form.scss
@@ -12,6 +12,6 @@ edit-profile-form {
     width: 50%;
     left: 50%;
     transform: translate(-50%, 0);
-    border-radius: 90px;
+    border-radius: 50%;
   }
 }
