--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -17,7 +17,7 @@ profile-view {
     width: 50%;
     left: 50%;
     transform: translate(-50%, 0);
-    border-radius: 90px;
+    border-radius: 50%;
   }
 
 }
