UPDATED: queue-for-instructors not instructing that specific office hours slot
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/components/queue-for-students/queue-for-students.html
+++ b/src/components/queue-for-students/queue-for-students.html
@@ -9,9 +9,10 @@
 
 <ion-row>
   <ion-col>
-    <button item-start ion-button class="queue-Check-In" clear (click)="toggleCheckIn()">
+    <button *ngIf="!isInstructing" item-start ion-button class="queue-Check-In" clear (click)="toggleCheckIn()">
       <span *ngIf="checkedIn">Check Out</span>
       <span *ngIf="!checkedIn">Check In</span>
     </button>
+    <p *ngIf="isInstructing">You are not instructing at this time</p>
   </ion-col>
 </ion-row>
