--- a/src/components/edit-hours-form/edit-hours-form.html
+++ b/src/components/edit-hours-form/edit-hours-form.html
@@ -1,3 +1,8 @@
+<!-- The EditHoursFormComponent displays the current office hours for a given course and then allows the instructor to 
+add an office hour to the list. They can also edit the current office hours if they are marked as an instructor for them. 
+The office hours are displayed as tabs and can be easily scrolled through. When an office hour is added, it is displayed 
+as the first tab in the list.  -->
+
 <ion-row center>
   <ion-col text-center>
     <button ion-button small round class="addButton" (click)="addOfficeHourSlot()" [disabled]="newOfficeHours">
