--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -1,3 +1,8 @@
+<!-- The LoginFormComponent displays the information when a user clicks Login from the HomePage. The user can then input 
+their email address and password if they have an account. They can also login using a Google Macalester email. Additionally, 
+if they don't have an account or Google login, then they can sign up for an account, which will then take them to the SignUpComponent. 
+ -->
+
 <form #loginForm="ngForm" novalidate>
   <ion-card>
     <ion-card-content>
