--- a/src/components/office-hours-list/office-hours-list.html
+++ b/src/components/office-hours-list/office-hours-list.html
@@ -1,3 +1,7 @@
+<!-- The OfficeHoursListComponent displays the ongoing and upcoming office hours, if they exist. It displays as a button containing
+the date and time of the office hours. After clicking on the individual office hours, the location, instructors, and student queue
+are displayed and the user can check into the queue. 
+ -->
 <ion-card *ngIf="currentOfficeHours">
   <ion-card-header class="header">
     Ongoing Office Hours
