--- a/src/components/profile-view/profile-view.html
+++ b/src/components/profile-view/profile-view.html
@@ -1,15 +1,10 @@
+<!-- The ProfileViewComponent displays the user's credentials including their preferred name and status as an instructor 
+and/or student. There are Sign Out and Edit buttons on the page, allowing a user to either sign out or edit their credentials. 
+ -->
+
 <img class="myAvatar" [src]="profile.avatarURL">
 <ion-card>
   <ion-card-content>
-    <!--<ion-item>-->
-      <!--<ion-label floating>Preferred Name</ion-label>-->
-      <!--<ion-input [value]="profile.name" readonly></ion-input>-->
-    <!--</ion-item>-->
-    <!--<ion-item>-->
-      <!--<ion-label floating>Status</ion-label>-->
-      <!--<ion-input *ngIf="this.profile.instructor" readonly [value]="'Instructor'"></ion-input>-->
-      <!--<ion-input *ngIf="this.profile.student" readonly [value]="'Student'"></ion-input>-->
-    <!--</ion-item>-->
     <ion-list>
       <ion-list-header>
         PREFERRED NAME
