added in documentation

--- a/src/components/sign-up-form/sign-up-form.html
+++ b/src/components/sign-up-form/sign-up-form.html
@@ -1,3 +1,6 @@
+<!-- This component is displayed when a user is signing up for an account through our app. It takes in a Macalester email and password 
+  and then allows a user to sign up for an account. 
+ -->
 <form #registerForm="ngForm" novalidate>
   <ion-card>
     <ion-card-content>
