Google logo styling

--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -1,6 +1,6 @@
-<!-- The LoginFormComponent displays the information when a user clicks Login from the HomePage. The user can then input 
-their email address and password if they have an account. They can also login using a Google Macalester email. Additionally, 
-if they don't have an account or Google login, then they can sign up for an account, which will then take them to the SignUpComponent. 
+<!-- The LoginFormComponent displays the information when a user clicks Login from the HomePage. The user can then input
+their email address and password if they have an account. They can also login using a Google Macalester email. Additionally,
+if they don't have an account or Google login, then they can sign up for an account, which will then take them to the SignUpComponent.
  -->
 
 <form #loginForm="ngForm" novalidate>
@@ -69,7 +69,7 @@ if they don't have an account or Google login, then they can sign up for an acco
     <ion-row>
       <ion-col>
         <button ion-button class="googleLogin" (click)="googleLogin()">
-          <ion-img width="35" height="35" src="../assets/imgs/google_login_icon.png"></ion-img>
+          <ion-img width="35" height="35" src="assets/imgs/google_login_icon.png"></ion-img>
         </button>
       </ion-col>
     </ion-row>
