--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -5,7 +5,7 @@ profile-view {
   }
 
   .signOut {
-    font-size: 100%;
+    font-size: 140%;
   }
 
   ion-row {
@@ -26,5 +26,13 @@ profile-view {
 
   .list-md {
     height: 10%;
+  }
+
+  .profile-list-item {
+    font-size: 85%;
+  }
+
+  .label.label-md {
+    font-size: 130%;
   }
 }
